--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,50 +1,125 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".LoginActivity">
+package com.example.healingfeeling;
 
-    <ImageView
-        android:layout_gravity="center"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/loaaing_icon" />
+import androidx.annotation.NonNull;
+import androidx.appcompat.app.AppCompatActivity;
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-        <EditText
-            android:id="@+id/loginActivity_edittext_id"
-            android:hint="아이디"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+import android.content.Intent;
+import android.graphics.Color;
+import android.os.Build;
+import android.os.Bundle;
+import android.view.View;
+import android.widget.Button;
+import android.widget.EditText;
+import android.widget.Toast;
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/loginActivity_edittext_password"
-            android:hint="패스워드"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+import com.google.android.gms.tasks.OnCompleteListener;
+import com.google.android.gms.tasks.Task;
+import com.google.firebase.auth.AuthResult;
+import com.google.firebase.auth.FirebaseAuth;
+import com.google.firebase.auth.FirebaseUser;
+import com.google.firebase.remoteconfig.FirebaseRemoteConfig;
 
-        <Button
-            android:text="로그인"
-            android:id="@+id/loginActivity_button_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:text="회원가입"
-            android:id="@+id/loginActivity_button_signin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+public class LoginActivity extends AppCompatActivity {
 
 
-    </com.google.android.material.textfield.TextInputLayout>
+    private EditText id;
+    private EditText password;
+
+    private Button login;
+    private Button signup;
+    private FirebaseRemoteConfig firebaseRemoteConfig;
+    private FirebaseAuth firebaseAuth;
+    private FirebaseAuth.AuthStateListener authStateListener;
 
 
 
-</LinearLayout>
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_login);
+        firebaseRemoteConfig = FirebaseRemoteConfig.getInstance();
+        firebaseAuth = FirebaseAuth.getInstance();
+        firebaseAuth.signOut();
+
+
+        String splash_background = firebaseRemoteConfig.getString(getString(R.string.rc_color));
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP) {
+            getWindow().setStatusBarColor(Color.parseColor(splash_background));
+        }
+
+        id = (EditText)findViewById(R.id.loginActivity_edittext_id);
+        password = (EditText)findViewById(R.id.loginActivity_edittext_password);
+
+
+
+        login = (Button)findViewById(R.id.loginActivity_button_login);
+        signup = (Button)findViewById(R.id.loginActivity_button_signup);
+        login.setBackgroundColor(Color.parseColor(splash_background));
+
+        login.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                loginEvent();
+            }
+        });
+
+        signup.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                startActivity(new Intent(LoginActivity.this,SignupActivity.class));
+            }
+        });
+
+        //로그인 인터페이스 리스너
+        authStateListener = new FirebaseAuth.AuthStateListener() {
+            @Override
+            public void onAuthStateChanged(@NonNull FirebaseAuth firebaseAuth) {
+                FirebaseUser user = firebaseAuth.getCurrentUser();
+
+                if(user != null){
+                    //로그인
+                    Intent intent = new Intent(LoginActivity.this,MainActivity.class);
+                    startActivity(intent);
+                    finish();
+
+                }else{
+                    //로그아웃
+                }
+
+            }
+        };
+
+
+
+
+    }
+
+
+    void loginEvent(){
+        firebaseAuth.signInWithEmailAndPassword(id.getText().toString(),password.getText().toString())
+                .addOnCompleteListener(new OnCompleteListener<AuthResult>() {
+                    @Override
+                    public void onComplete(@NonNull Task<AuthResult> task) {
+                        if(!task.isSuccessful()) {
+                            //로그인 실패한부분
+                            Toast.makeText(LoginActivity.this, task.getException().getMessage(), Toast.LENGTH_SHORT).show();
+                        }
+                    }
+                });
+
+
+
+    }
+
+    @Override
+    protected void onStart() {
+        super.onStart();
+        firebaseAuth.addAuthStateListener(authStateListener);
+    }
+
+    @Override
+    protected void onStop() {
+        super.onStop();
+        firebaseAuth.removeAuthStateListener(authStateListener);
+    }
+}
